[package]
name = "waparse-common"
version = "0.1.0"
authors = ["Med Mouine <mohamed.mouine.2@ulaval.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.63"
web-sys = { version = "0.3.39", features = ['console', 'FileReader'] }
csv = "1.1.3"
